--- a/src/Components/videoItem.css
+++ b/src/Components/videoItem.css
@@ -30,7 +30,8 @@
 }
 
 .vidDetail {
-  height: 80vh;
+  padding-top: 6vh;
+  padding-bottom: 6vh;
   -webkit-box-shadow: 0px 5px 10px black;
           box-shadow: 0px 5px 10px black;
   display: -webkit-box;
@@ -57,5 +58,38 @@
 .videoDetailText {
   color: white;
   font-size: 2vw;
+  margin-top: 4vh;
+}
+
+.channeltitle {
+  font-size: 1vw;
+  font-weight: 100;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: white;
+}
+
+.descp {
+  font-size: 1.1vw;
+}
+
+.title {
+  font-size: 2vw;
+  font-weight: bolder;
+}
+
+@media screen and (max-width: 800px) {
+  .videoItem {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .title {
+    font-size: 3.5vw;
+  }
+  .descp {
+    display: none;
+  }
 }
 /*# sourceMappingURL=videoItem.css.map */
