--- a/src/Components/videoItem.scss
+++ b/src/Components/videoItem.scss
@@ -1,40 +1,65 @@
 .videoItem {
-	width: 70vw;
-	padding: 3vh;
-	color: white;
-
-	display: flex;
-	transition-duration: 500ms;
-	&:hover {
-		background-color: #202020;
-	}
-	cursor: pointer;
+  width: 70vw;
+  padding: 3vh;
+  color: white;
+  display: flex;
+  transition-duration: 500ms;
+  &:hover {
+    background-color: #202020;
+  }
+  cursor: pointer;
 }
 
 .infoContiner {
-	padding: 10px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	height: 60%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 60%;
 }
 
 .vidDetail {
-	height: 80vh;
-	//background-color: red;
-	box-shadow: 0px 5px 10px black;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
+  padding-top: 6vh;
+  padding-bottom: 6vh;
+  box-shadow: 0px 5px 10px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .videoPlayer {
-	height: 37vw;
-	width: 74vw;
-	border: none;
-	//	box-shadow: 5px 5px 10px black;
+  height: 37vw;
+  width: 74vw;
+  border: none;
+  //	box-shadow: 5px 5px 10px black;
 }
 .videoDetailText {
-	color: white;
-	font-size: 2vw;
+  color: white;
+  font-size: 2vw;
+  margin-top: 4vh;
+}
+.channeltitle {
+  font-size: 1vw;
+  font-weight: 100;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: white;
+}
+.descp {
+  font-size: 1.1vw;
+}
+.title {
+  font-size: 2vw;
+  font-weight: bolder;
+}
+@media screen and (max-width: 800px) {
+  .videoItem {
+    flex-direction: column;
+  }
+  .title {
+    font-size: 3.5vw;
+  }
+  .descp {
+    display: none;
+  }
 }
